--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AzFn",
+  "name": "dabeiseinistalles-azure-functions",
   "version": "1.0.0",
   "description": "Azure functions based ETL for dabeiseinistalles",
   "scripts": {
@@ -8,6 +8,10 @@
     "prestart": "npm run build",
     "start": "func start",
     "test": "echo \"No tests yet...\""
+  },
+  "author": {
+    "name": "Christian Bär",
+    "email": "teggno@hotmail.com"
   },
   "private": true,
   "dependencies": {
